--- a/style.css
+++ b/style.css
@@ -15,6 +15,24 @@
     color: #1abc9c ;
 }
 
+.footer-padding {
+	padding-bottom: 20px;
+}
+
+.footer {
+	position: absolute;
+	text-align: center;
+	bottom: 0;
+	width: 100%;
+	height: 40px;
+	background-color: #1abc9c;
+}
+
+.footer p {
+	margin-top: 14px;
+	font-size: 12px;
+  color: #fff;
+}
 
 /* The side navigation menu */
 .sidebar {
@@ -49,35 +67,12 @@
 
 .body-text {
   margin-left: 210px;
-  margin-top: 5PX;
-  margin-bottom: 10px;
-  padding: 5px 5px 5px 5px;
+  padding: 0;
   position: fixed;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .hide {
   visibility:hidden;
-}
-
-
-
-.footer-padding {
-	padding-bottom: 10px;
-}
-
-.footer {
-	position: absolute;
-	text-align: center;
-	bottom: 0;
-	width: 100%;
-	height: 40px;
-	background-color: #1abc9c;
-}
-
-.footer p {
-	margin-top: 14px;
-	font-size: 12px;
-  color: #fff;
 }
